fix: whitespaces in diffs weren’t visible
Thus we set `white-space:pre-wrap`

--- a/app/assets/stylesheets/message_diffs.css.scss
+++ b/app/assets/stylesheets/message_diffs.css.scss
@@ -2,6 +2,8 @@
 
 .diff {
   overflow:auto;
+  white-space: pre;
+	white-space: pre-wrap;
 
   ul {
     overflow:auto;
